cmake_minimum_required(VERSION 3.27)

project(casacore_mini VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(CASACORE_MINI_WARNINGS_AS_ERRORS "Treat compiler warnings as errors" ON)
option(CASACORE_MINI_ENABLE_CLANG_TIDY "Enable clang-tidy linting" OFF)
option(CASACORE_MINI_ENABLE_COVERAGE "Enable coverage instrumentation" OFF)
option(CASACORE_MINI_ENABLE_DOXYGEN "Enable Doxygen documentation target" ON)

find_package(Git QUIET)
set(CASACORE_MINI_GIT_REVISION "unknown")
set(CASACORE_MINI_GIT_DESCRIBE "unknown")

if(Git_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
  execute_process(
    COMMAND ${GIT_EXECUTABLE} -C "${CMAKE_SOURCE_DIR}" rev-parse --short=12 HEAD
    OUTPUT_VARIABLE CASACORE_MINI_GIT_REVISION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET)

  execute_process(
    COMMAND ${GIT_EXECUTABLE} -C "${CMAKE_SOURCE_DIR}" describe --tags --dirty --always --match v[0-9]*
    OUTPUT_VARIABLE CASACORE_MINI_GIT_DESCRIBE
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET)
endif()

if(NOT CASACORE_MINI_GIT_REVISION)
  set(CASACORE_MINI_GIT_REVISION "unknown")
endif()

if(NOT CASACORE_MINI_GIT_DESCRIBE)
  set(CASACORE_MINI_GIT_DESCRIBE "unknown")
endif()

if(CASACORE_MINI_GIT_DESCRIBE STREQUAL "unknown")
  set(CASACORE_MINI_BUILD_VERSION "${PROJECT_VERSION}-dev")
elseif(CASACORE_MINI_GIT_DESCRIBE MATCHES "^v([0-9]+\\.[0-9]+\\.[0-9]+)$")
  if(CMAKE_MATCH_1 STREQUAL PROJECT_VERSION)
    set(CASACORE_MINI_BUILD_VERSION "${PROJECT_VERSION}")
  else()
    set(CASACORE_MINI_BUILD_VERSION "${PROJECT_VERSION}+${CASACORE_MINI_GIT_DESCRIBE}")
  endif()
else()
  set(CASACORE_MINI_BUILD_VERSION "${PROJECT_VERSION}+${CASACORE_MINI_GIT_DESCRIBE}")
endif()

configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/version_generated.hpp.in"
  "${CMAKE_CURRENT_BINARY_DIR}/generated/include/casacore_mini/version_generated.hpp"
  @ONLY)

add_library(casacore_mini_project_options INTERFACE)
target_compile_features(casacore_mini_project_options INTERFACE cxx_std_23)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
  target_compile_options(
    casacore_mini_project_options
    INTERFACE
      -Wall
      -Wextra
      -Wpedantic
      -Wconversion
      -Wsign-conversion
      -Wshadow
      -Wformat=2
      -Wundef
      -Wnon-virtual-dtor)

  if(CASACORE_MINI_WARNINGS_AS_ERRORS)
    target_compile_options(casacore_mini_project_options INTERFACE -Werror)
  endif()
elseif(MSVC)
  target_compile_options(casacore_mini_project_options INTERFACE /W4)
  if(CASACORE_MINI_WARNINGS_AS_ERRORS)
    target_compile_options(casacore_mini_project_options INTERFACE /WX)
  endif()
endif()

if(CASACORE_MINI_ENABLE_COVERAGE)
  if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    target_compile_options(casacore_mini_project_options INTERFACE --coverage)
    target_link_options(casacore_mini_project_options INTERFACE --coverage)
  else()
    message(WARNING "Coverage requested but compiler is not Clang/GNU; skipping coverage flags")
  endif()
endif()

if(CASACORE_MINI_ENABLE_CLANG_TIDY)
  find_program(CLANG_TIDY_EXE NAMES clang-tidy REQUIRED)
  set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
endif()

# --- Phase 8 dependencies: ERFA and WCSLIB ---
# Required for measures (ERFA) and coordinate projections (WCSLIB).
# Both are detected via pkg-config from system installs.
# ERFA also supports a vendored fallback (see third_party/erfa/).

find_package(PkgConfig REQUIRED)

# ERFA: astronomical time/frame transforms (BSD license).
# Strategy: pkg-config first, then vendored third_party/erfa/ fallback.
set(CASACORE_MINI_ERFA_FOUND FALSE)
pkg_check_modules(ERFA QUIET erfa)
if(ERFA_FOUND)
  set(CASACORE_MINI_ERFA_FOUND TRUE)
  add_library(erfa_dep INTERFACE)
  target_include_directories(erfa_dep INTERFACE ${ERFA_INCLUDE_DIRS})
  target_link_directories(erfa_dep INTERFACE ${ERFA_LIBRARY_DIRS})
  target_link_libraries(erfa_dep INTERFACE ${ERFA_LIBRARIES})
  message(STATUS "ERFA found via pkg-config: ${ERFA_VERSION}")
elseif(EXISTS "${CMAKE_SOURCE_DIR}/third_party/erfa/erfa.c")
  # Vendored single-file ERFA build (generated by erfa-fetch source_flattener.py).
  set(CASACORE_MINI_ERFA_FOUND TRUE)
  add_library(erfa_vendored STATIC "${CMAKE_SOURCE_DIR}/third_party/erfa/erfa.c")
  target_include_directories(erfa_vendored PUBLIC "${CMAKE_SOURCE_DIR}/third_party/erfa")
  set_target_properties(erfa_vendored PROPERTIES C_STANDARD 99 POSITION_INDEPENDENT_CODE ON)
  # Suppress warnings in vendored C code when building with our strict C++ flags.
  target_compile_options(erfa_vendored PRIVATE -w)
  add_library(erfa_dep INTERFACE)
  target_link_libraries(erfa_dep INTERFACE erfa_vendored)
  message(STATUS "ERFA using vendored source in third_party/erfa/")
else()
  message(FATAL_ERROR
    "ERFA not found. Install it via one of:\n"
    "  macOS:  build from source (see README.md)\n"
    "  Linux:  apt install liberfa-dev  OR  dnf install erfa-devel\n"
    "  Vendor: place erfa.c + erfa.h in third_party/erfa/\n"
    "See README.md for detailed instructions.")
endif()

# WCSLIB: FITS/WCS projection math (LGPL-3.0).
# System install via pkg-config only.
set(CASACORE_MINI_WCSLIB_FOUND FALSE)
pkg_check_modules(WCSLIB QUIET wcslib)
if(WCSLIB_FOUND)
  set(CASACORE_MINI_WCSLIB_FOUND TRUE)
  add_library(wcslib_dep INTERFACE)
  target_include_directories(wcslib_dep INTERFACE ${WCSLIB_INCLUDE_DIRS})
  target_link_directories(wcslib_dep INTERFACE ${WCSLIB_LIBRARY_DIRS})
  target_link_libraries(wcslib_dep INTERFACE ${WCSLIB_LIBRARIES})
  message(STATUS "WCSLIB found via pkg-config: ${WCSLIB_VERSION}")
else()
  message(FATAL_ERROR
    "WCSLIB not found. Install it via one of:\n"
    "  macOS:   brew install wcslib\n"
    "  Linux:   apt install wcslib-dev  OR  dnf install wcslib-devel\n"
    "See README.md for detailed instructions.")
endif()

# Reference data directory for vendored IERS/leap-second snapshots.
set(CASACORE_MINI_DATA_DIR_DEFAULT "${CMAKE_SOURCE_DIR}/data/reference"
    CACHE PATH "Default path to reference data files")

add_library(
  casacore_mini_core
  src/version.cpp
  src/record.cpp
  src/record_io.cpp
  src/aipsio_reader.cpp
  src/aipsio_writer.cpp
  src/aipsio_record_reader.cpp
  src/aipsio_record_writer.cpp
  src/record_metadata.cpp
  src/table_dat.cpp
  src/table_dat_writer.cpp
  src/table_schema.cpp
  src/table_binary_schema.cpp
  src/table_desc.cpp
  src/table_desc_writer.cpp
  src/measure_coord_metadata.cpp
  src/keyword_record.cpp
  src/keyword_record_convert.cpp
  src/table_directory.cpp
  src/standard_stman.cpp
  src/incremental_stman.cpp
  src/tiled_stman.cpp
  src/unit.cpp
  src/quantity.cpp
  src/measure_types.cpp
  src/measure_record.cpp
  src/erfa_bridge.cpp
  src/measure_convert.cpp
  src/velocity_machine.cpp
  src/table_measure_desc.cpp
  src/table_measure_column.cpp
  src/projection.cpp
  src/linear_xform.cpp
  src/obs_info.cpp
  src/coordinate.cpp
  src/direction_coordinate.cpp
  src/spectral_coordinate.cpp
  src/stokes_coordinate.cpp
  src/linear_coordinate.cpp
  src/tabular_coordinate.cpp
  src/quality_coordinate.cpp
  src/coordinate_system.cpp
  src/coordinate_util.cpp
  src/fits_coordinate_util.cpp
  src/gaussian_convert.cpp
  src/uvw_machine.cpp
  src/ms_enums.cpp
  src/measurement_set.cpp
  src/ms_subtables.cpp
  src/ms_columns.cpp
  src/ms_writer.cpp
  src/ms_iter.cpp
  src/ms_util.cpp
  src/ms_selection.cpp
  src/ms_metadata.cpp
  src/ms_summary.cpp
  src/ms_concat.cpp
  src/ms_flagger.cpp
  src/table.cpp
  src/lattice_shape.cpp
  src/lattice.cpp
  src/image.cpp
  src/lattice_region.cpp
  src/image_region.cpp
  src/lattice_expr.cpp
  src/taql.cpp)
target_include_directories(
  casacore_mini_core
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/generated/include>)
target_link_libraries(casacore_mini_core PUBLIC casacore_mini_project_options PRIVATE erfa_dep wcslib_dep)
target_compile_definitions(
  casacore_mini_core
  PRIVATE CASACORE_MINI_DATA_DIR_DEFAULT="${CASACORE_MINI_DATA_DIR_DEFAULT}")

enable_testing()
add_executable(version_test tests/version_test.cpp)
target_link_libraries(version_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME version_test COMMAND version_test)

add_executable(record_io_test tests/record_io_test.cpp)
target_link_libraries(record_io_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME record_io_test COMMAND record_io_test)

add_executable(aipsio_reader_test tests/aipsio_reader_test.cpp)
target_link_libraries(aipsio_reader_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME aipsio_reader_test COMMAND aipsio_reader_test)

add_executable(aipsio_writer_test tests/aipsio_writer_test.cpp)
target_link_libraries(aipsio_writer_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME aipsio_writer_test COMMAND aipsio_writer_test)

add_executable(aipsio_record_reader_test tests/aipsio_record_reader_test.cpp)
target_link_libraries(
  aipsio_record_reader_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME aipsio_record_reader_test COMMAND aipsio_record_reader_test)

add_executable(table_dat_test tests/table_dat_test.cpp)
target_link_libraries(table_dat_test PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_dat_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_dat_test COMMAND table_dat_test)

add_executable(table_schema_test tests/table_schema_test.cpp)
target_link_libraries(table_schema_test PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_schema_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_schema_test COMMAND table_schema_test)

add_executable(measure_coord_metadata_test tests/measure_coord_metadata_test.cpp)
target_link_libraries(
  measure_coord_metadata_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  measure_coord_metadata_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME measure_coord_metadata_test COMMAND measure_coord_metadata_test)

add_executable(keyword_record_test tests/keyword_record_test.cpp)
target_link_libraries(
  keyword_record_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  keyword_record_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME keyword_record_test COMMAND keyword_record_test)

add_executable(aipsio_record_writer_test tests/aipsio_record_writer_test.cpp)
target_link_libraries(
  aipsio_record_writer_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME aipsio_record_writer_test COMMAND aipsio_record_writer_test)

add_executable(record_metadata_test tests/record_metadata_test.cpp)
target_link_libraries(
  record_metadata_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  record_metadata_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME record_metadata_test COMMAND record_metadata_test)

add_executable(table_dat_writer_test tests/table_dat_writer_test.cpp)
target_link_libraries(
  table_dat_writer_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_dat_writer_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_dat_writer_test COMMAND table_dat_writer_test)

add_executable(table_desc_test tests/table_desc_test.cpp)
target_link_libraries(
  table_desc_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_desc_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_desc_test COMMAND table_desc_test)

add_executable(keyword_record_convert_test tests/keyword_record_convert_test.cpp)
target_link_libraries(
  keyword_record_convert_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME keyword_record_convert_test COMMAND keyword_record_convert_test)

add_executable(table_binary_schema_test tests/table_binary_schema_test.cpp)
target_link_libraries(
  table_binary_schema_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_binary_schema_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_binary_schema_test COMMAND table_binary_schema_test)

add_executable(table_directory_test tests/table_directory_test.cpp)
target_link_libraries(
  table_directory_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_directory_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_directory_test COMMAND table_directory_test)

add_executable(standard_stman_test tests/standard_stman_test.cpp)
target_link_libraries(
  standard_stman_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  standard_stman_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME standard_stman_test COMMAND standard_stman_test)

add_executable(incremental_stman_test tests/incremental_stman_test.cpp)
target_link_libraries(
  incremental_stman_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME incremental_stman_test COMMAND incremental_stman_test)

add_executable(tiled_directory_test tests/tiled_directory_test.cpp)
target_link_libraries(
  tiled_directory_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  tiled_directory_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME tiled_directory_test COMMAND tiled_directory_test)

add_executable(semantic_parity_test tests/semantic_parity_test.cpp)
target_link_libraries(
  semantic_parity_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  semantic_parity_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME semantic_parity_test COMMAND semantic_parity_test)

add_executable(quantity_test tests/quantity_test.cpp)
target_link_libraries(quantity_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME quantity_test COMMAND quantity_test)

add_executable(unit_test tests/unit_test.cpp)
target_link_libraries(unit_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME unit_test COMMAND unit_test)

add_executable(measure_types_test tests/measure_types_test.cpp)
target_link_libraries(measure_types_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME measure_types_test COMMAND measure_types_test)

add_executable(measure_record_test tests/measure_record_test.cpp)
target_link_libraries(measure_record_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME measure_record_test COMMAND measure_record_test)

add_executable(erfa_bridge_test tests/erfa_bridge_test.cpp)
target_link_libraries(erfa_bridge_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME erfa_bridge_test COMMAND erfa_bridge_test)

add_executable(measure_convert_test tests/measure_convert_test.cpp)
target_link_libraries(measure_convert_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME measure_convert_test COMMAND measure_convert_test)

add_executable(velocity_machine_test tests/velocity_machine_test.cpp)
target_link_libraries(velocity_machine_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME velocity_machine_test COMMAND velocity_machine_test)

add_executable(measure_convert_full_test tests/measure_convert_full_test.cpp)
target_link_libraries(measure_convert_full_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME measure_convert_full_test COMMAND measure_convert_full_test)

add_executable(table_measure_desc_test tests/table_measure_desc_test.cpp)
target_link_libraries(table_measure_desc_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME table_measure_desc_test COMMAND table_measure_desc_test)

add_executable(table_measure_column_test tests/table_measure_column_test.cpp)
target_link_libraries(table_measure_column_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME table_measure_column_test COMMAND table_measure_column_test)

add_executable(projection_test tests/projection_test.cpp)
target_link_libraries(projection_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME projection_test COMMAND projection_test)

add_executable(linear_xform_test tests/linear_xform_test.cpp)
target_link_libraries(linear_xform_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME linear_xform_test COMMAND linear_xform_test)

add_executable(obs_info_test tests/obs_info_test.cpp)
target_link_libraries(obs_info_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME obs_info_test COMMAND obs_info_test)

add_executable(direction_coordinate_test tests/direction_coordinate_test.cpp)
target_link_libraries(direction_coordinate_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME direction_coordinate_test COMMAND direction_coordinate_test)

add_executable(spectral_coordinate_test tests/spectral_coordinate_test.cpp)
target_link_libraries(spectral_coordinate_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME spectral_coordinate_test COMMAND spectral_coordinate_test)

add_executable(stokes_coordinate_test tests/stokes_coordinate_test.cpp)
target_link_libraries(stokes_coordinate_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME stokes_coordinate_test COMMAND stokes_coordinate_test)

add_executable(coordinate_record_test tests/coordinate_record_test.cpp)
target_link_libraries(coordinate_record_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME coordinate_record_test COMMAND coordinate_record_test)

add_executable(coordinate_system_test tests/coordinate_system_test.cpp)
target_link_libraries(coordinate_system_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME coordinate_system_test COMMAND coordinate_system_test)

add_executable(coordinate_util_test tests/coordinate_util_test.cpp)
target_link_libraries(coordinate_util_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME coordinate_util_test COMMAND coordinate_util_test)

add_executable(fits_coordinate_util_test tests/fits_coordinate_util_test.cpp)
target_link_libraries(fits_coordinate_util_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME fits_coordinate_util_test COMMAND fits_coordinate_util_test)

add_executable(gaussian_convert_test tests/gaussian_convert_test.cpp)
target_link_libraries(gaussian_convert_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME gaussian_convert_test COMMAND gaussian_convert_test)

add_executable(uvw_machine_test tests/uvw_machine_test.cpp)
target_link_libraries(uvw_machine_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME uvw_machine_test COMMAND uvw_machine_test)

add_executable(measure_malformed_test tests/measure_malformed_test.cpp)
target_link_libraries(measure_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME measure_malformed_test COMMAND measure_malformed_test)

add_executable(coordinate_malformed_test tests/coordinate_malformed_test.cpp)
target_link_libraries(coordinate_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME coordinate_malformed_test COMMAND coordinate_malformed_test)

add_executable(reference_data_absence_test tests/reference_data_absence_test.cpp)
target_link_libraries(reference_data_absence_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME reference_data_absence_test COMMAND reference_data_absence_test)

add_executable(measurement_set_test tests/measurement_set_test.cpp)
target_link_libraries(measurement_set_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME measurement_set_test COMMAND measurement_set_test)

add_executable(ms_subtables_test tests/ms_subtables_test.cpp)
target_link_libraries(ms_subtables_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_subtables_test COMMAND ms_subtables_test)

add_executable(ms_columns_test tests/ms_columns_test.cpp)
target_link_libraries(ms_columns_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_columns_test COMMAND ms_columns_test)

add_executable(ms_writer_test tests/ms_writer_test.cpp)
target_link_libraries(ms_writer_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_writer_test COMMAND ms_writer_test)

add_executable(ms_iter_test tests/ms_iter_test.cpp)
target_link_libraries(ms_iter_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_iter_test COMMAND ms_iter_test)

add_executable(ms_util_test tests/ms_util_test.cpp)
target_link_libraries(ms_util_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_util_test COMMAND ms_util_test)

add_executable(ms_selection_test tests/ms_selection_test.cpp)
target_link_libraries(ms_selection_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_selection_test COMMAND ms_selection_test)

add_executable(ms_selection_parity_test tests/ms_selection_parity_test.cpp)
target_link_libraries(ms_selection_parity_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_selection_parity_test COMMAND ms_selection_parity_test)

add_executable(ms_selection_parser_test tests/ms_selection_parser_test.cpp)
target_link_libraries(ms_selection_parser_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_selection_parser_test COMMAND ms_selection_parser_test)

add_executable(ms_selection_malformed_test tests/ms_selection_malformed_test.cpp)
target_link_libraries(ms_selection_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_selection_malformed_test COMMAND ms_selection_malformed_test)

add_executable(ms_selection_table_expr_bridge_test tests/ms_selection_table_expr_bridge_test.cpp)
target_link_libraries(ms_selection_table_expr_bridge_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_selection_table_expr_bridge_test COMMAND ms_selection_table_expr_bridge_test)

add_executable(taql_w7_closure_test tests/taql_w7_closure_test.cpp)
target_link_libraries(taql_w7_closure_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME taql_w7_closure_test COMMAND taql_w7_closure_test)

add_executable(phase11_integration_test tests/phase11_integration_test.cpp)
target_link_libraries(phase11_integration_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME phase11_integration_test COMMAND phase11_integration_test)

add_executable(ms_metadata_test tests/ms_metadata_test.cpp)
target_link_libraries(ms_metadata_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_metadata_test COMMAND ms_metadata_test)

add_executable(ms_summary_test tests/ms_summary_test.cpp)
target_link_libraries(ms_summary_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_summary_test COMMAND ms_summary_test)

add_executable(ms_concat_test tests/ms_concat_test.cpp)
target_link_libraries(ms_concat_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_concat_test COMMAND ms_concat_test)

add_executable(ms_flagger_test tests/ms_flagger_test.cpp)
target_link_libraries(ms_flagger_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_flagger_test COMMAND ms_flagger_test)

add_executable(ms_malformed_test tests/ms_malformed_test.cpp)
target_link_libraries(ms_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME ms_malformed_test COMMAND ms_malformed_test)

add_executable(lattice_shape_test tests/lattice_shape_test.cpp)
target_link_libraries(lattice_shape_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME lattice_shape_test COMMAND lattice_shape_test)

add_executable(lattice_test tests/lattice_test.cpp)
target_link_libraries(lattice_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME lattice_test COMMAND lattice_test)

add_executable(image_test tests/image_test.cpp)
target_link_libraries(image_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME image_test COMMAND image_test)

add_executable(image_malformed_test tests/image_malformed_test.cpp)
target_link_libraries(image_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME image_malformed_test COMMAND image_malformed_test)

add_executable(lel_malformed_test tests/lel_malformed_test.cpp)
target_link_libraries(lel_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME lel_malformed_test COMMAND lel_malformed_test)

add_executable(lattice_region_test tests/lattice_region_test.cpp)
target_link_libraries(lattice_region_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME lattice_region_test COMMAND lattice_region_test)

add_executable(image_region_test tests/image_region_test.cpp)
target_link_libraries(image_region_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME image_region_test COMMAND image_region_test)

add_executable(lattice_expr_test tests/lattice_expr_test.cpp)
target_link_libraries(lattice_expr_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME lattice_expr_test COMMAND lattice_expr_test)

add_executable(lel_parser_test tests/lel_parser_test.cpp)
target_link_libraries(lel_parser_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME lel_parser_test COMMAND lel_parser_test)

add_executable(mutation_persist_test tests/mutation_persist_test.cpp)
target_link_libraries(mutation_persist_test PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  mutation_persist_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME mutation_persist_test COMMAND mutation_persist_test)

add_executable(utility_parity_test tests/utility_parity_test.cpp)
target_link_libraries(utility_parity_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME utility_parity_test COMMAND utility_parity_test)

add_executable(image_coverage_test tests/image_coverage_test.cpp)
target_link_libraries(image_coverage_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME image_coverage_test COMMAND image_coverage_test)

add_executable(image_regrid_test tests/image_regrid_test.cpp)
target_link_libraries(image_regrid_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME image_regrid_test COMMAND image_regrid_test)

add_executable(taql_parser_test tests/taql_parser_test.cpp)
target_link_libraries(taql_parser_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME taql_parser_test COMMAND taql_parser_test)

add_executable(taql_malformed_test tests/taql_malformed_test.cpp)
target_link_libraries(taql_malformed_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME taql_malformed_test COMMAND taql_malformed_test)

add_executable(taql_eval_test tests/taql_eval_test.cpp)
target_link_libraries(taql_eval_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME taql_eval_test COMMAND taql_eval_test)

add_executable(taql_command_test tests/taql_command_test.cpp)
target_link_libraries(taql_command_test PRIVATE casacore_mini_core casacore_mini_project_options)
add_test(NAME taql_command_test COMMAND taql_command_test)

add_executable(aipsio_fixture_gen src/aipsio_fixture_gen.cpp)
target_link_libraries(aipsio_fixture_gen PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  aipsio_fixture_gen
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

add_executable(table_schema_cli src/table_schema_cli.cpp)
target_link_libraries(table_schema_cli PRIVATE casacore_mini_core casacore_mini_project_options)

add_executable(interop_mini_tool src/interop_mini_tool.cpp)
target_link_libraries(interop_mini_tool PRIVATE casacore_mini_core casacore_mini_project_options)

add_executable(table_test tests/table_test.cpp)
target_link_libraries(
  table_test
  PRIVATE casacore_mini_core casacore_mini_project_options)
target_compile_definitions(
  table_test
  PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME table_test COMMAND table_test)

# Demo programs (also serve as integration tests)
foreach(demo demo_aipsio_record demo_table_read demo_table_write
        demo_measure demo_measure_m1950_2000 demo_coordinate demo_coordinate_world_map
        demo_coordinate_remove_axes demo_unit demo_ms_write demo_ms_read
        demo_ms_select)
  add_executable(${demo} demos/${demo}.cpp)
  target_link_libraries(${demo} PRIVATE casacore_mini_core casacore_mini_project_options)
  add_test(NAME ${demo} COMMAND ${demo})
endforeach()
target_compile_definitions(demo_table_read PRIVATE CASACORE_MINI_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

# Performance benchmark programs (casacore-mini side; casacore-original built by shell script)
add_executable(bench_mini_read tools/perf/bench_mini_read.cpp)
target_link_libraries(bench_mini_read PRIVATE casacore_mini_core)
target_compile_options(bench_mini_read PRIVATE -O2)
set_target_properties(bench_mini_read PROPERTIES EXCLUDE_FROM_ALL TRUE)

add_executable(bench_mini_write tools/perf/bench_mini_write.cpp)
target_link_libraries(bench_mini_write PRIVATE casacore_mini_core)
target_compile_options(bench_mini_write PRIVATE -O2)
set_target_properties(bench_mini_write PROPERTIES EXCLUDE_FROM_ALL TRUE)

if(CASACORE_MINI_ENABLE_DOXYGEN)
  find_package(Doxygen QUIET)
  if(DOXYGEN_FOUND)
    set(DOXYGEN_OUTPUT_DIR "${CMAKE_BINARY_DIR}/docs/doxygen")
    configure_file("${CMAKE_SOURCE_DIR}/docs/Doxyfile.in" "${CMAKE_BINARY_DIR}/Doxyfile" @ONLY)

    add_custom_target(
      doc
      COMMAND "${CMAKE_COMMAND}" -E make_directory "${DOXYGEN_OUTPUT_DIR}"
      COMMAND "${DOXYGEN_EXECUTABLE}" "${CMAKE_BINARY_DIR}/Doxyfile"
      WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
      COMMENT "Generating API documentation with Doxygen"
      VERBATIM)
  else()
    message(STATUS "Doxygen not found; doc target is disabled")
  endif()
endif()
